<resources>
    <string name="app_name">SSS</string>
    <string name="action_settings">Settings</string>
    <string name="ID">ID</string>
    <string name="password">Password</string>
    <string name="login">로그인</string>
    <string name="alter_login">다른 계정으로 로그인</string>
    <string name="google_login">Google</string>
    <string name="register">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ocr_plan_dsc">타이핑으로 약속 추가\n이름, 장소, 날짜(시작날짜,시작시간, 종료날짜, 종료시간), 카테고리(없으면 X)\n예시) 회의, 영남대, 2021–11-15, 13:00 2021-11-16, 14:00 소공</string>
    <string formatted="false" name="profile_age">%s</string>
</resources>