<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="org.sehproject.sss.datatype.AccountXML" />
        <variable
            name="userLogic"
            type="org.sehproject.sss.logic.UserLogic" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="222dp"
            android:layout_height="142dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/bottomLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_person" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:hint="@string/ID">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={user.userId}"
                        android:textColor="#383838"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_lock" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="17dp"
                    android:hint="@string/password">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"
                        android:text="@={user.password}"
                        android:textColor="#383838"
                        android:textSize="20sp" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register"
                    style="@style/ButtonStyle"
                    android:layout_width="152dp"
                    android:layout_height="38dp"
                    android:layout_marginEnd="16dp"
                    android:onClick="@{()->userLogic.onRegisterClick()}"
                    android:text="@string/register" />
                <!--android:enabled="@{viewmodel.btnSelected}"-->

                <Button
                    android:id="@+id/btn_login"
                    style="@style/ButtonStyle"
                    android:layout_width="152dp"
                    android:layout_height="38dp"
                    android:onClick="@{()->userLogic.onLoginClick(user)}"
                    android:text="@string/login" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alter_login"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
                    android:id="@+id/button_naver_login"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"/>

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/button_google_login"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>